# WingMate

./: .gitignore  LICENSE  README.md  pyproject.toml  wingmate-config.yaml
.github/workflows/: release.yml
examples/: simple.py
src/localagent/: __init__.py  _types.py  agent.py  environment.py  history_utils.py  llm.py  settings.py  simple_agent.py  types.py  utils.py
src/localagent/agents/: simple.py
src/wingmate/: utils.py
tests/: test_stream.py
tests/data/: stream_test.txt
