[project]
name = "localagent"
version = "0.2.0"
description = "Orchestrate AI agents locally with ease."
readme = "README.md"
authors = [
    { name = "pritam-dey3", email = "pritam.pritamdey.984@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
  "fastmcp>=2.13.0.2",
  "jinja2>=3.1.6",
  "json-schema-to-pydantic>=0.4.7",
  "openai>=2.6.0",
  "partialjson>=1.0.0",
  "pydantic>=2.12.3",
  "pydantic-settings>=2.11.0",
]

[project.scripts]
localagent = "localagent:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "pre-commit>=4.2.0",
]

[tool.poe.tasks]
precmt = "pre-commit run --all-files"

[tool.pyright]
enableExperimentalFeatures = true
